[package]
name = "bccdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
url = {version = "2"}
reqwest = { version = "0.11", features = ["blocking","gzip"] }
tempfile= "3"
lazy_static = "1.4.0"
