[package]
name = "bccdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shlex = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
url = {version = "2"}
reqwest = { version = "0.11", features = ["blocking","gzip"] }
tempfile= "3"
once_cell = "1.10.0"
